fix: Apply Subhramit's suggestions